--- a/package.json
+++ b/package.json
@@ -5,21 +5,16 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "prisma:studio": "prisma studio",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:seed": "node prisma/seed.js"
+    "start": "next start"
   },
   "dependencies": {
-    "next": "14.0.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "@mollie/api-client": "^2.0.0",
-    "@prisma/client": "^5.0.0",
-    "next-auth": "^4.24.0",
-    "bcryptjs": "^2.4.3",
+    "next": "^14.2.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "next-auth": "^4.24.13",
     "nodemailer": "^7.0.7",
-    "prisma": "^5.0.0",
-    "tailwindcss": "^3.5.0"
+    "prisma": "^5.4.2",
+    "@prisma/client": "^5.4.2",
+    "tailwindcss": "^3.4.3"
   }
 }
